Add refreshtoken generation usecase and Refactor routes
