# pkg/api/routes/user.go
@@ -8,11 +8,15 @@ import (
 
 func UserRoutes(api *gin.RouterGroup, userHandler *handler.UserHandler) {
 	// login route for user
-	api.POST("/login", userHandler.UserLogin)
+	auth := api.Group("/auth")
+	{
+		auth.POST("/login", userHandler.UserLogin)
+		auth.POST("/signup", userHandler.UserSignUp)
+	}
+
 	// signup routes for user
 	user := api.Group("/user")
 	{
-		user.POST("/signup", userHandler.UserSignUp)
 		user.GET("/me", userHandler.UserMe)
 	}
 
